public/stylesheets/search.css
#search-page .page-title {
    margin: 1.5rem auto auto;
    color: var(--text-primary);
    font-size: 2rem;
}

#search-results .card-wrapper {
    /* Hide for load more function */
    display: none;
}

#search-page .load-more {
    display: none;
}

#search-page .total-results {
    font-size: 1.5rem;
    margin: 1rem 1rem;
}

#search-page .no-results {
    font-size: 1.8rem;
    margin: 1.2rem 0;
    text-align: center;
}

#search-page .suggestions {
    margin: 1rem 0;
    font-size: 1.2rem;
}

#search_section {
    margin: 3rem auto auto;
}

#search_button {
    margin: 0.5rem 1rem;
    font-size: 1.2rem;
    border-radius: 5px;
    display: inline-block;
}

#search_field {
    margin: 0.5rem 0;
    border-radius: 5px;
}

#search_bar {
    position: relative;
    display: flex;
}

#search_bar {
    padding: 0;
}

#clear_button {
    position: absolute;
    display: flex;
    right: 1rem;
    top: 30%;
    margin: 0 1rem;
    border: none;
    height: auto;
    width: auto;
    cursor: pointer;
    background-color: transparent;
}

.textField_input {
    font-family: inherit;
    width: 100%;
    height: 3rem;
    border: 1px solid var(--button-primary);
    outline: 0;
    font-size: 1rem;
    color: #212121;
    padding: 0 1rem;
}

@media (min-width: 768px){
    #search-page .total-results {
        font-size: 1.5rem;
        margin: 1.2rem 0;
    }
}

